# OptyWayWW

./: README.md
OpenXLSX-master/Examples/: CMakeLists.txt  CMakeSettings.json
OpenXLSX_test/MyProject/: CMakeLists.txt  ___main (2).cpp  main.cpp
libxl-4.1.0/: changelog.txt
libxl-4.1.0/examples/c++/vs2022/extract/: extract.cpp
libxl-4.1.0/examples/c++/vs2022/generate/: example.xlsx
libxl-4.1.0/examples/c++/vs2022/x64/Debug/: example.xlsx  format.xlsx  invoice.xlsx
libxl-4.1.0/include_c/: enum.h  libxl.h
libxl-4.1.0/include_cpp/: libxl.h
tmp/Project1/: Project1.sln
tmp/Project1/Project1/: Project1.aps  Project1.rc  Project1.vcxproj  resource.h
tmp/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  Project1.res  vc143.idb
tmp/WindowsProject1/: WindowsProject1.sln
tmp/WindowsProject1/WindowsProject1/: WindowsProject1.aps  WindowsProject1.rc  WindowsProject1.vcxproj  resource.h
tmp/WindowsProject1/WindowsProject1/x64/Debug/: WindowsProject1.exe.recipe  WindowsProject1.ilk  WindowsProject1.res  vc143.idb
wwalk/: wwalk.sln
wwalk/wwalk/: MainForm.cpp  MainForm.h  wwalk.vcxproj
wwalk/wwalk/x64/Debug/: .NETFramework,Version=v4.7.2.AssemblyAttributes.nativecodeanalysis.sarif  CodeAnalysisResultManifest.txt  MainForm.nativecodeanalysis.sarif  wwalk.exe.recipe  wwalk.vcxproj.FileListAbsolute.txt  wwalk.vcxproj.GenerateResource.cache
wwalk/wwalk/x64/Debug/wwalk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wwalk.lastbuildstate
wwalk/x64/Debug/: wwalk.exe.metagen
(+107 files in other folders)
