#=======================================================================================================================
# Preamble
#=======================================================================================================================
cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(OpenXLSX.Examples)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

#=======================================================================================================================
# Define Demo1 target
#=======================================================================================================================
add_executable(Demo1 Demo1.cpp)
target_link_libraries(Demo1 PRIVATE OpenXLSX::OpenXLSX)

#=======================================================================================================================
# Define Demo1A target
#=======================================================================================================================
if(${OPENXLSX_ENABLE_LIBZIP})
    find_package(LIBZIP MODULE REQUIRED)
    add_executable(Demo1A Demo1A.cpp)
    target_link_libraries(Demo1A PRIVATE OpenXLSX::OpenXLSX libzip::zip)
endif()

#=======================================================================================================================
# Define Demo2 target
#=======================================================================================================================
add_executable(Demo2 Demo2.cpp)
target_link_libraries(Demo2 PRIVATE OpenXLSX::OpenXLSX)


